# algorithms

./: .gitignore  README.md
1sem/1module/: md1_1_3(FracSum).cpp  md1_2_4.cpp  md1_3_3(SetIntersection).cpp  md1_4_1(DinamicQueue).cpp  md1_5_2(BracketSequence).cpp  md1_6_4(SegmentMax).cpp  ФИВТ МФТИ. 2018. 1 семестр. 1 задание.docx
1sem/2module/: md2_1_4(InsertionStringSort).cpp  md2_2_3(LineFill).cpp  md2_3_3(KthStatistics).cpp  md2_4_2(AlmostSorted).cpp  md2_5_3(BinaryMSD).cpp  md2_6(OptimizedQuickSort).cpp  (+1 more)
2sem/1module/md1_1_1(GraphPresentation)/: CMakeLists.txt  README  main.cpp
2sem/1module/md1_1_1(GraphPresentation)/headers/: ArcGraph.h  Graphs.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h  TestingFunc.h
2sem/1module/md1_1_1(GraphPresentation)/sources/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  TestingFunc.cpp
2sem/1module/md1_1_1(GraphPresentation)/tests/: test1  test10  test2  test3  test4  test5  test6  test7  test8  test9  testrandom
2sem/3module/2sem_md3_2a(ApproximateTrabellongSalesmanProblemSolution)/: CMakeLists.txt  main.cpp
2sem/3module/2sem_md3_2a(ApproximateTrabellongSalesmanProblemSolution)/headers/: AccurateTravellingSalesmanProblemSolution.h  ApproximateTravellingSalesmanProblemSolution.h  DSU.h  FindMST.h  GraphGenerator.h  IGraph.hpp  ListGraph.hpp
2sem/3module/2sem_md3_2a(ApproximateTrabellongSalesmanProblemSolution)/sources/: AccurateTravellingSalesmanProblemSolution.cpp  ApproximateTravellingSalesmanProblemSolution.cpp  DSU.cpp  FindMST.cpp  GraphGenerator.cpp
3sem/1module/1.A/: CMakeLists.txt  main.cpp
(+50 files in other folders)
